# fastapi

./: .env  .env.example  .gitignore  Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  generate_tree.py  pyproject.toml  requirements.txt  runapi.bat  rundocker.bat  stopdocker.bat  structure.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 07c1c82e1a2e_.py  16a230a5bdc9_add_columns_to_posts_table.py  1938e42478d6_remove_visibility_from_posts.py  252356124a8b_add_content_column_to_posts_table.py  5f8864182ef9_initial_create_tables.py  b36684a2d348_add_users_table.py  c8aa27d49077_add_username_bio_and_privacy_to_users.py  e3a2a519f9e8_add_fk_to_posts_table.py  e45742b0d3e0_add_created_at_at_follow.py  fd4d01243bbb_create_psots_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  test_db.py  utils.py
app/api/v1/: __init__.py  dependencies.py
app/core/: config.py  enums.py  logger.py  logging.py
app/core/exceptions/: auth.py  base_exception.py  comment.py  exception_handler.py  (+4 more)
app/db/: database.py
app/legacy/: main_raw_sql.py
app/routers/: auth.py  post.py  user.py  vote.py
app/services/: auth.py  auth_service.py  comment_service.py  follow_service.py  post_service.py  reaction_service.py  user.py  user_service.py
scripts/: enter-api.sh  enter-db.sh  enter-testdb.sh  run-app.sh  stop-app.sh  test-cov.sh  upgrade-db.sh
tests/: conftest.py  database.py  test_app.py  test_posts.py  test_users.py  test_votes.py
tests/fixtures/: services_fixtures.py  user_fixtures.py
(+53 files in other folders)
