[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.2",
    "jose>=1.0.0",
    "psycopg>=3.3.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.14.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.21",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "black>=25.12.0",
    "ruff>=0.14.9",
]
